# aggrs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: aggregate.rs  discovery.rs  main.rs  merge.rs  options.rs  smolvalue.rs  visitors.rs
tests/: test.csv  test.json  test.txt
