[package]
name = "aggrs"
version = "0.3.0"
edition = "2021"
authors = ["Nicola Bonelli <nicola.bonelli@larthia.com>"]
description = "A fast command-line tool for building aggregation trees from JSON and CSV data"
license = "MIT"
repository = "https://github.com/awgn/aggrs"
homepage = "https://github.com/awgn/aggrs"
documentation = "https://github.com/awgn/aggrs#readme"
readme = "README.md"
keywords = ["aggregation", "json", "csv", "cli", "data-analysis"]
categories = ["command-line-utilities", "data-structures", "parsing"]
exclude = ["tests/*", "target/*", "*.pcap", "test.json", "test.csv", "diff_test"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
csv = "1.4.0"
rayon = "1.11.0"
regex = "1.12.2"
scopeguard = "1.2.0"
serde = "1.0.228"
serde_json = "1.0.149"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false