[package]
name = "aggrs"
version = "0.4.0"
edition = "2021"
authors = ["Nicola Bonelli <nicola.bonelli@larthia.com>"]
description = "A fast command-line tool for building aggregation trees from JSON and CSV data"
license = "MIT"
repository = "https://github.com/awgn/aggrs"
homepage = "https://github.com/awgn/aggrs"
documentation = "https://github.com/awgn/aggrs#readme"
readme = "README.md"
keywords = ["aggregation", "json", "csv", "cli", "data-analysis"]
categories = ["command-line-utilities", "data-structures", "parsing"]
exclude = ["tests/*", "target/*", "*.pcap", "test.json", "test.csv", "diff_test"]

[dependencies]
anyhow = "1.0.102"
ahash = "0.8"
hashbrown = "0.15"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
csv = "1.4.0"
rayon = "1.12.0"
regex = "1.12.3"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smol_str = { version = "0.3.6", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
strip = "symbols"
